Fix xman scss (remove vertical align, strange behaviour appeared)

--- a/app/styles/_xman.scss
+++ b/app/styles/_xman.scss
@@ -1,7 +1,10 @@
 /* Center vertical align xman table */
 
-.xman-table > tbody > tr > td {
-  vertical-align: middle;
+
+.xman-table > tbody > tr.success > td,
+.xman-table > tbody > tr.danger > td 
+{
+//  vertical-align: middle;
   // CSS Transitions
   -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
@@ -20,11 +23,11 @@
 }
 
 .xman-table div.speed-buttons > button.btn-success-remove, 
-.xman-table div.speed-buttons > button.btn-warning-remove,
-.xman-table div.speed-buttons > button.btn-success-add, 
-.xman-table div.speed-buttons > button.btn-warning-add {
+.xman-table div.speed-buttons > button.btn-warning-remove
+{
   -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
+
